# multivon-eval

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: install-smoke.yml  test.yml
benchmarks/: README.md  _add_cis.py  run_all_benchmarks.py  run_answer_accuracy_benchmark.py  run_coherence_benchmark.py  run_cost_latency_benchmark.py  run_external_judges_benchmark.py  run_faithfulness_benchmark.py  run_hallucination_benchmark.py  run_multi_judge_agreement_benchmark.py  run_relevance_benchmark.py  run_reproducibility_benchmark.py  run_summeval_benchmark.py  run_threshold_calibration.py  run_truly_held_out.py
benchmarks/results/: calibration.json  cost_latency.json  faithfulness.json  hallucination.json  hallucination_held_out.json  multi_judge_agreement.json  relevance.json  reproducibility.json  summeval_gpt35.json  summeval_gpt4o_mini.json  summeval_sonnet.json
docs/: docs.json  introduction.mdx  quickstart.mdx  why-multivon-eval.mdx
docs/compliance/: audit-trail.mdx  bundle.mdx  dpdp.mdx  eu-ai-act.mdx  overview.mdx
docs/evaluators/: agent.mdx  compliance.mdx  consistency.mdx  conversation.mdx  deterministic.mdx  llm-judge.mdx  multimodal.mdx
docs/guides/: agent-trace.mdx  anthropic-evals-checklist.mdx  attribution.mdx  bootstrap.mdx  ci-cd.mdx  compliance.mdx  examples.mdx  experiments.mdx  factory-suites.mdx  generate.mdx  input-quality.mdx  install-skills.mdx  integrations.mdx  intelligent-eval.mdx  production-targets.mdx  reliability-metrics.mdx  reliability.mdx  score-logged-outputs.mdx  simulate.mdx  staleness.mdx  statistical-rigor.mdx  synthetic-data.mdx  validate.mdx
docs/mcp/: agent-recipes.mdx  configuration.mdx  overview.mdx  tool-reference.mdx
docs/pdfhell/: ci-integration.mdx  cli-reference.mdx  faq.mdx  quickstart.mdx  trap-families.mdx
docs/reference/: eval-report.mdx  view.mdx
docs/skills/: eval-audit.mdx  eval-bootstrap.mdx  eval-explain.mdx  index.mdx
examples/: 01_output.txt  01_rag_insurance_faithfulness.py  01_rag_insurance_faithfulness_output.json  02_contract_pdfhell_trap.py  02_contract_pdfhell_trap_output.json  02_output.txt  03_output.txt  03_support_qa_multi_evaluator.py  03_support_qa_multi_evaluator_output.json  04_output.txt  04_pii_medical_records.py  04_pii_medical_records_output.json  05_staleness_drift.py  06_simulate_personas.py  README.md  agent_eval.py  basic_eval.py  check_eval.py  ci_eval.py  enterprise_eval.py  eu_ai_act_eval.py  rag_eval.py
examples/datasets/: qa_sample.jsonl
llm_evals/: __init__.py  case.py  result.py  suite.py
llm_evals/evaluators/: __init__.py  base.py  deterministic.py  llm_judge.py
multivon_eval/: __init__.py  __main__.py  _contrast.py  _cost_models.py  _pii_scan.py  _simulate_prompts.py  adapters.py  audit_package.py  auto.py  cache.py  calibration.py  case.py  case_gates.py  cli.py  compare.py  compliance.py  costs.py  dataset.py  dirview.py  dirview_server.py  discover.py  exceptions.py  experiments.py  generate.py  input_gate.py  judge.py  lockfile.py  mutate.py  passk.py  provenance.py  pytest_plugin.py  recorder.py  result.py  retry.py  secrets.py  simulate.py  staleness.py  suite.py  targets.py  templates.py  (+2 more)
notebooks/: agent_eval.ipynb  quickstart.ipynb  rag_eval.ipynb
scripts/: validate_auto_prototype.py
skills/: README.md
tests/: test_agent_evaluators.py  test_agent_framework_templates.py  test_anthropic_temperature_fix.py  test_async_evaluators.py  test_attribution.py  test_audit_package_calibration_pin.py  test_audit_provenance.py  test_auto_evaluators.py  test_auto_unicode_obfuscation.py  test_auto_validate_adversarial.py  test_beginner_friendly.py  test_calibration_pinning.py  test_calibration_provenance.py  test_case_gates.py  test_check_evaluator.py  test_cli_commands.py  test_compare.py  test_compliance_evaluators.py  test_compliance_reporter.py  test_compliance_v2.py  test_contrast_pairs.py  test_conversation_evaluators.py  test_costs.py  test_demo_resilience.py  test_dirview.py  test_discover.py  test_dogfood_fixes.py  test_eval_status.py  test_evaluators.py  test_exceptions.py  test_generate_spans.py  test_hipaa_and_audit_package.py  test_html_report.py  test_html_status_badges.py  test_input_gate.py  test_integrations.py  test_integrations_live.py  test_judge_cache.py  test_judge_integrity.py  test_judge_retry.py  (+16 more)
(+35 files in other folders)
