[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multivon-eval"
version = "0.1.0"
description = "AI evaluation for teams that ship models to production"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "evaluation", "ai", "evals", "rag", "agents", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "jsonschema>=4.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://multivon.ai"
Repository = "https://github.com/multivon-ai/llm-evals"
Documentation = "https://github.com/multivon-ai/llm-evals#readme"
"Bug Tracker" = "https://github.com/multivon-ai/llm-evals/issues"

[project.scripts]
multivon-eval = "multivon_eval.cli:main"

[tool.setuptools.packages.find]
include = ["multivon_eval*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
