[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multivon-eval"
version = "0.7.0"
description = "AI evaluation for teams that ship models to production"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Multivon", email = "hello@multivon.ai" }
]
keywords = ["llm", "evaluation", "ai", "evals", "rag", "agents", "testing", "llm-judge", "agent-evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "jsonschema>=4.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0.0"]
bertscore = ["bert-score>=0.3.0"]
requests = ["requests>=2.28.0"]
browser = ["playwright>=1.40.0", "requests>=2.28.0"]
pytest = ["pytest>=7.0.0"]
all = ["litellm>=1.0.0", "bert-score>=0.3.0", "requests>=2.28.0", "playwright>=1.40.0", "pytest>=7.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://multivon.ai"
Repository = "https://github.com/multivon-ai/multivon-eval"
Documentation = "https://evaldocs.multivon.ai"
"Bug Tracker" = "https://github.com/multivon-ai/multivon-eval/issues"

[project.scripts]
multivon-eval = "multivon_eval.cli:main"

[project.entry-points."pytest11"]
multivon_eval = "multivon_eval.pytest_plugin"

[tool.setuptools.packages.find]
include = ["multivon_eval*"]

[tool.setuptools.package-data]
"multivon_eval._calibration_data" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
